# apeiron

./: .gitignore  .gitmodules  README.md  build.sh  flake.nix  test.sh
apeiron-core/: CMakeLists.txt
apeiron-core/.cache/clangd/index/: test.cpp.E5883A6F28C5B15D.idx
apeiron-core/demos/: CMakeLists.txt
apeiron-core/demos/glfw_window/: CMakeLists.txt
apeiron-core/demos/glfw_window/src/: main.cpp
apeiron-core/demos/sdl_vulkan_demo/: CMakeLists.txt
apeiron-core/demos/sdl_vulkan_demo/src/: main.cpp
apeiron-core/demos/sdl_window/: CMakeLists.txt
apeiron-core/demos/sdl_window/src/: main.cpp
apeiron-core/src/: app.cpp  app.hpp  errors.hpp
apeiron-core/src/app/: app.cpp  app.hpp  app_data.hpp
apeiron-core/src/include/apeiron_core/: apeiron_core.hpp
apeiron-core/src/vulkan/: vk_main.cpp  vk_main.hpp
apeiron-core/src/window/: window.hpp
apeiron-core/src/window/glfw/: glfw_main.cpp  glfw_main.hpp
apeiron-core/src/window/sdl/: sdl_main.cpp  sdl_main.hpp
apeiron-core/tests/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
apeiron-core/tests/test0/: CMakeLists.txt  CTestTestfile.cmake
apeiron-core/tests/test0/src/: test.cpp
